gccida/c1/set_mem_align
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/set_mem_align/src/emit-rtl.c:2341:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/set_mem_align/src/emit-rtl.c:2346:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = ( __int64 *)mem[1]; 
                 ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/set_mem_align/src/emit-rtl.c:2350:19: error: expected expression
v4 = ( tree_node *)v2[1]; 
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/set_mem_align/src/emit-rtl.c:2350:8: error: use of undeclared identifier 'tree_node'
v4 = ( tree_node *)v2[1]; 
       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/set_mem_align/src/emit-rtl.c:2363:27: error: use of undeclared identifier 'machine_mode'
v6 = gen_rtx_CONST_INT( ( machine_mode)mem, mode_size[v7]); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/set_mem_align/src/emit-rtl.c:2365:63: error: use of undeclared identifier 'machine_mode'
*( _QWORD *)&mem[1] = get_mem_attrs( v3, v4, v5, v6, align, ( machine_mode)*( ( unsigned __int8 *)mem + 2)); 
                                                              ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/set_mem_align/src/obj/emit-rtl.o] Error 1
